--- a/halo/checkout.html
+++ b/halo/checkout.html
@@ -102,7 +102,7 @@
           <div class="inner-row"><span>Số điện thoại: </span><span>099.999.9999</span></div>
           <div class="inner-row"><span class="checkout-box__inner-header">Thời điểm giao hàng dự kiến:</span><span>03/04/2021 00:00</span></div>
           <div class="inner-row"><span class="checkout-box__inner-header">Thanh toán:</span><span>Đã thanh toán bằng thẻ VISA lúc 01/04/2021 00:00</span></div>
-          <div class="hotline"><span class="checkout-box__inner-header">Tổng đài hỗ trợ 24/07: </span><span>0xx.xxx.xxxx   </span></div>
+          <div class="hotline"><span class="checkout-box__inner-header">Tổng đài hỗ trợ 24/07: </span><span class="text-primary">0169.749.6263 </span></div><a class="btn btn--continue-buying" href="index.html">Tiếp tục mua hàng  </a>
         </div>
       </div>
     </main>
