--- a/halo/details.html
+++ b/halo/details.html
@@ -116,8 +116,7 @@
             <p class="summary__text">Canon EOS 1D X Mark III mang đến chuẩn mực cao nhất cho dòng máy ảnh DSLR full-frame. Cho tới hiện tại, đây là chiếc máy ảnh hàng đầu và đẳng cấp nhất của Canon.</p>
             <p class="details__price">130.090.000đ</p>
             <p class="details__sale-text"><span class="details__old-price">138.090.000đ</span><span class="details__sale-badge"><img src="img/img--misc/badge--sale.png" alt=""></span><span class="details__sale-amount">(Giảm 8.000.000đ)</span></p>
-            <div class="summary__btn-wrapper">
-              <button class="summary__btn btn">Mua ngay      </button>
+            <div class="summary__btn-wrapper"><a class="summary__btn btn d-flex justify-content-center align-items-center" href="cart.html">Mua ngay      </a>
               <button class="summary__btn btn">Thêm vào giỏ hàng </button>
             </div>
             <div class="summary__box-content"> 
