--- a/halo/parts/visa-master-card.html
+++ b/halo/parts/visa-master-card.html
@@ -33,7 +33,6 @@
     <div class="form-group">
       <label for="visa-master-input__name">Mã số CVV:</label>
       <input class="form-control back-input" id="visa-master-input__cvv" type="number" min="1" max="999" required="required"/>
-    </div>
-    <input class="btn btn--confirmation" type="submit" value="Xác nhận"/>
+    </div><a class="btn btn--confirmation" href="checkout.html">Xác nhận</a>
   </form>
 </div>
