--- a/halo/payment.html
+++ b/halo/payment.html
@@ -210,8 +210,7 @@
                         <div class="form-group">
                           <label for="input__name">Nhập tên chủ thẻ:&nbsp; <i>(Viết cách, không dấu)</i></label>
                           <input class="form-control front-input" id="input__name" type="text" required>
-                        </div>
-                        <input class="btn btn--confirmation" type="submit" value="Xác nhận">
+                        </div><a class="btn btn--confirmation" href="checkout.html">Xác nhận</a>
                       </form>
                     </div>
                   </div>
@@ -254,8 +253,7 @@
                         <div class="form-group">
                           <label for="visa-master-input__name">Mã số CVV:</label>
                           <input class="form-control back-input" id="visa-master-input__cvv" type="number" min="1" max="999" required>
-                        </div>
-                        <input class="btn btn--confirmation" type="submit" value="Xác nhận">
+                        </div><a class="btn btn--confirmation" href="checkout.html">Xác nhận</a>
                       </form>
                     </div>
                   </div>
