--- a/halo/search-result.html
+++ b/halo/search-result.html
@@ -89,7 +89,7 @@
       <div class="search__banner w-100"><img class="search__logo" src="img/img--misc/logo-white.png" alt=""></div>
       <section class="page-wrapper container-xl"> 
         <div class="result-item-area"> 
-          <h1 class="search__header w-100">
+          <h1 class="search__header w-100 text-left">
              Tìm thấy&nbsp;<span class="search__result">3</span>&nbsp;kết quả cho:&nbsp;<span class="search__result">5D</span></h1>
           <div class="card item"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt="">
             <div class="card-body text-center">
