--- a/halo/index.html
+++ b/halo/index.html
@@ -257,7 +257,7 @@
                 <p class="subtext font-italic font-weight-light"><i class="far fa-clock mx-2"></i>01/01/2021</p>
               </div>
               <p class="review-preview">Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản.</p>
-            </div></a><a class="review-item d-flex" href="review.html" data-aos="fade-left" data-aos-offset="250" data-aos-easing="ease-in-sine" data-aos-duration="1000"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="">
+            </div></a><a class="review-item d-flex" href="review.html" data-aos="fade-left" data-aos-offset="100" data-aos-easing="ease-in-sine" data-aos-duration="1000"><img class="review-item__img" src="img/img--misc/review-img-v2.png" alt="">
             <div class="review-item__content d-flex flex-column justify-content-between">
               <div class="review-header d-flex flex-wrap align-items-start align-content-start">
                 <h2 class="w-100 font-weight-bold">Top 5 DSLR đáng mua năm 2021</h2>
@@ -295,6 +295,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="js/aos-init.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
