--- a/halo/parts/domestic-card.html
+++ b/halo/parts/domestic-card.html
@@ -28,7 +28,6 @@
     <div class="form-group">
       <label for="input__name">Nhập tên chủ thẻ:&nbsp; <i>(Viết cách, không dấu)</i></label>
       <input class="form-control front-input" id="input__name" type="text" required="required"/>
-    </div>
-    <input class="btn btn--confirmation" type="submit" value="Xác nhận"/>
+    </div><a class="btn btn--confirmation" href="checkout.html">Xác nhận</a>
   </form>
 </div>
