--- a/halo/review.html
+++ b/halo/review.html
@@ -93,20 +93,15 @@
             <li data-target="#sub-banner-area--min" data-slide-to="1"></li>
             <li data-target="#sub-banner-area--min" data-slide-to="2"></li>
           </ul>
-          <div class="carousel-inner">
-            <div class="carousel-item active"><img src="/halo/img/img--review/sub-banner-big--min.jpg" alt="">
+          <div class="carousel-inner"><a class="carousel-item active" href="review-details.html"> <img src="/halo/img/img--review/sub-banner-big--min.jpg" alt="">
               <div class="carousel-caption">
                 <h3>Nikon Z7 Review:&nbsp; </h3>
                 <p>Canh bạc cho tương lai của Nikon</p>
-              </div>
-            </div>
-            <div class="carousel-item"><img src="img/img--review/review-sub-banner-1.png" alt=""></div>
-            <div class="carousel-item"><img src="img/img--review/review-sub-banner-2.png" alt=""></div>
-          </div><a class="carousel-control-prev" href="#sub-banner-area--min" data-slide="prev"><span class="carousel-control-prev-icon"></span></a><a class="carousel-control-next" href="#sub-banner-area--min" data-slide="next"><span class="carousel-control-next-icon"></span></a>
+              </div></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-1.png" alt=""></a><a class="carousel-item" href="review-details.html"> <img src="img/img--review/review-sub-banner-2.png" alt=""></a></div><a class="carousel-control-prev" href="#sub-banner-area--min" data-slide="prev"><span class="carousel-control-prev-icon"></span></a><a class="carousel-control-next" href="#sub-banner-area--min" data-slide="next"><span class="carousel-control-next-icon"></span></a>
         </div>
       </section>
-      <section class="container-xl hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="#"><span>Nikon Z7 Review: </span><span>Canh bạc cho tương lai của Nikon</span></a>
-        <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href=""><img src="img/img--review/review-sub-banner-1.png" alt=""></a><a class="review__sub-banner--small" href=""><img src="img/img--review/review-sub-banner-2.png" alt=""></a></div>
+      <section class="container-xl hidden-till-md" id="sub-banner-area--max"><a class="review__sub-banner--big" href="review-details.html"><span>Nikon Z7 Review: </span><span>Canh bạc cho tương lai của Nikon</span></a>
+        <div class="review__sub-banner--small-area"> <a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-1.png" alt=""></a><a class="review__sub-banner--small" href="review-details.html"><img src="img/img--review/review-sub-banner-2.png" alt=""></a></div>
       </section>
       <section class="main-area container-xl">
         <div class="review__post-area">
