--- a/halo/parts/card-5.html
+++ b/halo/parts/card-5.html
@@ -1,8 +1,8 @@
 
-<div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""/>
+<div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""/><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""/><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt=""/>
   <div class="card-body text-center">
     <p class="card-title font-weight-bold font-18">Canon 1DX Mark III<br/><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
     <p class="card-text price font-weight-bold">130.090.000đ</p>
-    <p class="card-text sale-text font-weight-bold"><span class="old-price">138.090.000đ</span><span class="sale-badge"><img src="img/img--misc/badge--sale.png" alt=""/></span><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
+    <p class="card-text sale-text font-weight-bold"><span class="old-price">138.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""/><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
   </div>
 </div>
