--- a/halo/camera-hub.html
+++ b/halo/camera-hub.html
@@ -142,35 +142,35 @@
         <div class="slider-row slider">
           <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">50.090.000đ</p>
               <div class="card-text sale-text font-weight-bold"><span class="old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
           <div class="card item item--hot item--love"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Fujifilm X-E3 Silver<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Fujifilm X-E3 Silver<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">10.290.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price">17.490.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 7.200.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
           <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Sony Alpha A7 Mark II<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Sony Alpha A7 Mark II<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">23.990.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price">26.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 3.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
           <div class="card item item--hot"><img class="card-img-top" src="img/img--item/item-4.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Nikon D7500<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Nikon D7500<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">17.990.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price">22.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 5.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
           <div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Canon 1DX Mark III<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Canon 1DX Mark III<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">130.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price">138.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
@@ -182,35 +182,35 @@
         <div class="slider-row slider">
           <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">50.090.000đ</p>
               <div class="card-text sale-text font-weight-bold"><span class="old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
           <div class="card item item--hot item--love"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Fujifilm X-E3 Silver<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Fujifilm X-E3 Silver<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">10.290.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price">17.490.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 7.200.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
           <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Sony Alpha A7 Mark II<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Sony Alpha A7 Mark II<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">23.990.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price">26.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 3.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
           <div class="card item item--hot"><img class="card-img-top" src="img/img--item/item-4.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Nikon D7500<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Nikon D7500<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">17.990.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price">22.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 5.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
           <div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Canon 1DX Mark III<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Canon 1DX Mark III<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">130.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price">138.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
@@ -222,35 +222,35 @@
         <div class="slider-row slider">
           <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">50.090.000đ</p>
               <div class="card-text sale-text font-weight-bold"><span class="old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
           <div class="card item item--hot item--love"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Fujifilm X-E3 Silver<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Fujifilm X-E3 Silver<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">10.290.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price">17.490.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 7.200.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
           <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Sony Alpha A7 Mark II<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Sony Alpha A7 Mark II<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">23.990.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price">26.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 3.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
           <div class="card item item--hot"><img class="card-img-top" src="img/img--item/item-4.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Nikon D7500<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Nikon D7500<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">17.990.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price">22.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 5.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
           </div>
           <div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
-              <p class="card-title font-weight-bold font-18">Canon 1DX Mark III<br><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+              <p class="card-title font-weight-bold font-18">Canon 1DX Mark III<br><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
               <p class="card-text price font-weight-bold">130.090.000đ</p>
               <p class="card-text sale-text font-weight-bold"><span class="old-price">138.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
             </div>
