--- a/halo/parts/card-4.html
+++ b/halo/parts/card-4.html
@@ -1,7 +1,7 @@
 
 <div class="card item item--hot"><img class="card-img-top" src="img/img--item/item-4.jpg" alt=""/><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""/><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt=""/>
   <div class="card-body text-center">
-    <p class="card-title font-weight-bold font-18">Nikon D7500<br/><span class="font-italic font font-weight-light font-13">(Mới 100% fullbox)</span></p>
+    <p class="card-title font-weight-bold font-18">Nikon D7500<br/><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
     <p class="card-text price font-weight-bold">17.990.000đ</p>
     <p class="card-text sale-text font-weight-bold"><span class="old-price">22.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""/><span class="sale-amount font-italic">(Giảm 5.000.000đ)</span></p><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
   </div>
