--- a/halo/parts/card-1.html
+++ b/halo/parts/card-1.html
@@ -1,7 +1,8 @@
 
 <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""/><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""/><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt=""/>
   <div class="card-body text-center">
-    <p class="card-title font-weight-bold font-18">Canon EOS 5D Mark IV<br/><span class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</span></p>
+    <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark IV</p>
+    <p class="font-italic font-weight-light item__subtext">(Mới 100% fullbox)</p>
     <p class="card-text price font-weight-bold">50.090.000đ</p>
     <div class="card-text sale-text font-weight-bold"><span class="old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""/><span class="sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark seemore-btn" href="details.html">Xem chi tiết </a>
   </div>
