--- a/halo/camera-hub.html
+++ b/halo/camera-hub.html
@@ -191,7 +191,7 @@
               <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">138.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
             </div>
           </div>
-        </div><a class="btn btn--dark hub-row__btn" href="dslr-hub.html">Xem toàn bộ </a><a href="dslr-hub.html"> <img class="hub-row__banner hidden-till-md" src="img/img--camera-hub/camera-hub-banner-2.jpg" alt=""></a>
+        </div><a class="btn btn--dark btn--seemore" href="dslr-hub.html">Xem toàn bộ </a><a href="dslr-hub.html"> <img class="hub-row__banner hidden-till-md" src="img/img--camera-hub/camera-hub-banner-2.jpg" alt=""></a>
       </section>
       <section class="hub-row hub-row--hot container-xl">
         <h1 class="section__header">BÁN CHẠY</h1>
@@ -246,7 +246,7 @@
               <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">138.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
             </div>
           </div>
-        </div><a class="btn btn--dark hub-row__btn" href="dslr-hub.html">Xem toàn bộ </a><a href="dslr-hub.html"> <img class="hub-row__banner hidden-till-md" src="img/img--camera-hub/camera-hub-banner-1.jpg" alt=""></a>
+        </div><a class="btn btn--dark btn--seemore" href="dslr-hub.html">Xem toàn bộ </a><a href="dslr-hub.html"> <img class="hub-row__banner hidden-till-md" src="img/img--camera-hub/camera-hub-banner-1.jpg" alt=""></a>
       </section>
       <section class="hub-row hub-row--love container-xl">
         <h1 class="section__header">ĐÁNH GIÁ TỐT</h1>
@@ -301,7 +301,7 @@
               <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">138.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
             </div>
           </div>
-        </div><a class="btn btn--dark hub-row__btn" href="dslr-hub.html">Xem toàn bộ </a><a href="dslr-hub.html"> <img class="hub-row__banner hidden-till-md" src="img/img--camera-hub/camera-hub-banner-3.jpg" alt=""></a>
+        </div><a class="btn btn--dark btn--seemore" href="dslr-hub.html">Xem toàn bộ </a><a href="dslr-hub.html"> <img class="hub-row__banner hidden-till-md" src="img/img--camera-hub/camera-hub-banner-3.jpg" alt=""></a>
       </section>
     </main>
     <footer class="dark-side" id="footer"> 
