--- a/halo/parts/card-5.html
+++ b/halo/parts/card-5.html
@@ -2,7 +2,7 @@
 <div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""/><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""/><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt=""/>
   <div class="card-body text-center">
     <div class="item__header">
-      <p class="item__name font-weight-bold">Canon 1DX Mark III</p>
+      <p class="item__name font-weight-bold">Canon EOS 1DX Mark&nbsp;III</p>
       <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
     </div>
     <p class="item__price font-weight-bold">130.090.000đ</p>
