--- a/halo/search-result.html
+++ b/halo/search-result.html
@@ -91,35 +91,25 @@
       <section class="page-wrapper container-xl"> 
         <div class="result-item-area"> 
           <h1 class="search__header w-100 text-left">
-             Tìm thấy&nbsp;<span class="search__result">3</span>&nbsp;kết quả cho:&nbsp;<span class="search__result">5D</span></h1>
+             Tìm thấy&nbsp;<span class="search__result">2</span>&nbsp;kết quả cho:&nbsp;<span class="search__result">Canon</span></h1>
           <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
               <div class="item__header">
-                <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark IV</p>
+                <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark&nbsp;IV</p>
                 <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
               </div>
               <p class="item__price font-weight-bold">50.090.000đ</p>
               <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">58.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
             </div>
           </div>
-          <div class="card item item--hot item--sale"><img class="card-img-top" src="img/img--item/item-2.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
+          <div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
               <div class="item__header">
-                <p class="item__name font-weight-bold">Fujifilm X-E3 Silver</p>
+                <p class="item__name font-weight-bold">Canon EOS 1DX Mark&nbsp;III</p>
                 <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
               </div>
-              <p class="item__price font-weight-bold">10.290.000đ</p>
-              <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">17.490.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 7.200.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết </a>
-            </div>
-          </div>
-          <div class="card item item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
-            <div class="card-body text-center">
-              <div class="item__header">
-                <p class="item__name font-weight-bold">Sony Alpha A7 Mark II</p>
-                <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
-              </div>
-              <p class="item__price font-weight-bold">23.990.000đ</p>
-              <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">26.990.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 3.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
+              <p class="item__price font-weight-bold">130.090.000đ</p>
+              <div class="item__sale-module font-weight-bold"><span class="sale-module__old-price">138.090.000đ</span><img class="item__badge item__badge--sale" src="img/img--misc/badge--sale.png" alt=""><span class="sale-module__sale-amount font-italic">(Giảm 8.000.000đ)</span></div><a class="btn btn--dark btn--seemore" href="details.html">Xem chi tiết  </a>
             </div>
           </div>
         </div>
@@ -143,7 +133,6 @@
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
