--- a/halo/camera-hub.html
+++ b/halo/camera-hub.html
@@ -144,7 +144,7 @@
           <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
               <div class="item__header">
-                <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark IV</p>
+                <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark&nbsp;IV</p>
                 <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
               </div>
               <p class="item__price font-weight-bold">50.090.000đ</p>
@@ -164,7 +164,7 @@
           <div class="card item item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
               <div class="item__header">
-                <p class="item__name font-weight-bold">Sony Alpha A7 Mark II</p>
+                <p class="item__name font-weight-bold">Sony Alpha A7 Mark&nbsp;II</p>
                 <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
               </div>
               <p class="item__price font-weight-bold">23.990.000đ</p>
@@ -184,7 +184,7 @@
           <div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
               <div class="item__header">
-                <p class="item__name font-weight-bold">Canon 1DX Mark III</p>
+                <p class="item__name font-weight-bold">Canon EOS 1DX Mark&nbsp;III</p>
                 <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
               </div>
               <p class="item__price font-weight-bold">130.090.000đ</p>
@@ -199,7 +199,7 @@
           <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
               <div class="item__header">
-                <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark IV</p>
+                <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark&nbsp;IV</p>
                 <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
               </div>
               <p class="item__price font-weight-bold">50.090.000đ</p>
@@ -219,7 +219,7 @@
           <div class="card item item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
               <div class="item__header">
-                <p class="item__name font-weight-bold">Sony Alpha A7 Mark II</p>
+                <p class="item__name font-weight-bold">Sony Alpha A7 Mark&nbsp;II</p>
                 <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
               </div>
               <p class="item__price font-weight-bold">23.990.000đ</p>
@@ -239,7 +239,7 @@
           <div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
               <div class="item__header">
-                <p class="item__name font-weight-bold">Canon 1DX Mark III</p>
+                <p class="item__name font-weight-bold">Canon EOS 1DX Mark&nbsp;III</p>
                 <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
               </div>
               <p class="item__price font-weight-bold">130.090.000đ</p>
@@ -254,7 +254,7 @@
           <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
               <div class="item__header">
-                <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark IV</p>
+                <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark&nbsp;IV</p>
                 <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
               </div>
               <p class="item__price font-weight-bold">50.090.000đ</p>
@@ -274,7 +274,7 @@
           <div class="card item item--sale"><img class="card-img-top" src="img/img--item/item-3.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
               <div class="item__header">
-                <p class="item__name font-weight-bold">Sony Alpha A7 Mark II</p>
+                <p class="item__name font-weight-bold">Sony Alpha A7 Mark&nbsp;II</p>
                 <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
               </div>
               <p class="item__price font-weight-bold">23.990.000đ</p>
@@ -294,7 +294,7 @@
           <div class="card item"><img class="card-img-top" src="img/img--item/item-5.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
             <div class="card-body text-center">
               <div class="item__header">
-                <p class="item__name font-weight-bold">Canon 1DX Mark III</p>
+                <p class="item__name font-weight-bold">Canon EOS 1DX Mark&nbsp;III</p>
                 <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
               </div>
               <p class="item__price font-weight-bold">130.090.000đ</p>
