--- a/halo/details.html
+++ b/halo/details.html
@@ -340,7 +340,7 @@
             <div class="card item item--hot item--love item--sale"><img class="card-img-top" src="img/img--camera-body/canon-eos-5d-mark-iv-card.jpg" alt=""><img class="item__badge item__badge--hot" src="img/img--misc/badge--hot.png" alt=""><img class="item__badge item__badge--love" src="img/img--misc/badge--love.png" alt="">
               <div class="card-body text-center">
                 <div class="item__header">
-                  <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark IV</p>
+                  <p class="item__name font-weight-bold font-18">Canon EOS 5D Mark&nbsp;IV</p>
                   <p class="item__subtext font-italic font-weight-light">(Mới 100% fullbox)</p>
                 </div>
                 <p class="item__price font-weight-bold">50.090.000đ</p>
@@ -376,7 +376,6 @@
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
