--- a/halo/index.html
+++ b/halo/index.html
@@ -151,7 +151,7 @@
               <div class="carousel-caption__img"></div>
             </div>
           </div>
-          <div class="carousel-item banner-3 container-fluid p-0"><img class="outer-ring hidden-till-md" src="img/img--carousel/outer-ring-min.png" alt=""><img class="inner-ring hidden-till-md" src="img/img--carousel/ring-v5.png" alt="">
+          <div class="carousel-item banner-3 container-fluid p-0"><img class="outer-ring hidden-till-md" src="img/img--carousel/outer-ring-min.png" alt=""><img class="inner-ring" src="img/img--carousel/ring-v5.png" alt="">
             <div class="carousel-caption container-xl pb-0 px-0 px-md-5 px-xl-0">
               <h1 class="carousel-title font-weight-bold">Tiêu điểm tháng 1</h1>
               <div class="carousel-caption__text">
@@ -293,7 +293,6 @@
     <script src="https://kit.fontawesome.com/d8c5e3f38e.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/aos-init.js"></script>
     <script src="js/script.js"></script>
